patch: fixed link color to contrast - reduced description text

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -14,7 +14,7 @@
 
   --indigo: #2c3e50;
 
-  --bluecat: #6f91ff;
+  --bluecat: #587fff;
 
   --brand: #9B32FF;
   --brand-hover: #ab52ff;
